--- a/CommWebApp/src/main/resources/application.properties
+++ b/CommWebApp/src/main/resources/application.properties
@@ -2,7 +2,7 @@ server.contextPath=/
 server.port=4000
 
 #data-source configurations
-spring.datasource.url = jdbc:mysql://localhost:3306/commwebapp?useSSL=false
+spring.datasource.url = jdbc:mysql://localhost:3306/commwebapp
 spring.datasource.driverClassName = com.mysql.cj.jdbc.Driver
 spring.datasource.username = root
  spring.datasource.password=QAmeme2019
